# cau25308007-db-project

./: workspace.code-workspace
backend/: pyproject.toml
backend/backend/: __main__.py  account.py  app.py  classes.py  classroom.py  config.py  course.py  lecture.py  my_account.py  registration.py  schedule.py  session.py  student.py  teacher.py  term.py  utils.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: config.js  utils.tsx
frontend/src/app/: globals.css  layout-client.tsx  layout.tsx  page.tsx
frontend/src/app/components/: SearchSelect.tsx  useComponentVisible.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/account/: page.tsx
frontend/src/app/dashboard/classroom/: page.tsx
frontend/src/app/dashboard/course/: ClassManagement.tsx  LectureManagement.tsx  RegistrationManagement.tsx  page.tsx
frontend/src/app/dashboard/my-account/: page.tsx
frontend/src/app/dashboard/register/: page.tsx
frontend/src/app/dashboard/schedule/: page.tsx
frontend/src/app/dashboard/term/: page.tsx
