[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Paro <ref.paro@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
mysql = "^0.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
